lending med relize

--- a/index.html
+++ b/index.html
@@ -381,30 +381,30 @@
 
 					<h2 class="h2 h2long">Организационная информация</h2>
 					<div class="info__line">
-						<p class="p">Дата проведения мероприятия:</p>
-						<p class="p__bold"> &#8226 5 апреля 2021 г. - 10 апреля 2021 г.</p>
+						<p class="p p__ml">Дата проведения мероприятия:</p>
+						<p class="p__bold p__ml"> &#8226 5 апреля 2021 г. - 10 апреля 2021 г.</p>
 					</div>
 					<div class="info__line">
-						<p>Время начала мероприятия:</p>
-						<p class="p__bold"> &#8226 18:00 <span>(московское время)</span> </p>
+						<p class="p__ml">Время начала мероприятия:</p>
+						<p class="p__bold p__ml"> &#8226 18:00 <span>(московское время)</span> </p>
 					</div>
 					<div class="info__line">
-						<p>Вид мероприятия</p>
-						<p class="p__bold"> &#8226 Вебинар</p>
+						<p class="p p__ml">Вид мероприятия</p>
+						<p class="p__bold p__ml" > &#8226 Вебинар</p>
 					</div>
 					<div class="info__line">
-						<p>Размер взноса</p>
-						<p class="p__bold"> &#8226 3500 рублей</p>
+						<p class="p p__ml">Размер взноса</p>
+						<p class="p__bold p__ml"> &#8226 3500 рублей</p>
 					</div>
 					<div class="info__line">
-						<p>Начисление баллов НМО</p>
-						<p class="p__bold"> &#8226 6 баллов</p>
+						<p class="p p__ml">Начисление баллов НМО</p>
+						<p class="p__bold p__ml"> &#8226 6 баллов</p>
 					</div>
 
 				</div>
 				<div class="inform__block-right section">
 					<div class="butto__wrap">
-						<button>Добавить в избранное
+						<button class='favoritesAdd'>Добавить в избранное
 							<svg class="heart" width="46" height="46" viewBox="0 0 24 24" fill="none"
 								xmlns="http://www.w3.org/2000/svg">
 								<path
