--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 				</div>
 			</div>
 
-			<h3 class="h3">Похожие мероприяти</h3>
+			<h3 class="h3">Похожие мероприятия</h3>
 		</div>
 	</div>
 
