--- a/index.html
+++ b/index.html
@@ -281,9 +281,7 @@
 						<a href='/' class="modal__content-item">
 							<img src="./assets/redTreangle.svg" alt="">
 						</a>
-						<a href='/' class="modal__content-item">
-
-						</a>
+					
 						<a href='/' class="modal__content-item">
 							<img src="./assets/logo.svg" alt="">
 						</a>
@@ -312,7 +310,7 @@
 							</svg>
 
 						</a>
-						<img src="./assets/logoFaq.svg" alt="">
+
 
 
 					</div>
@@ -330,43 +328,39 @@
 		<div class="nearestEvents">
 			<div class="container">
 				<div class="scrollWrap">
-					<div class="arrowBlock arrowLeft"><svg width="34" height="34" viewBox="0 0 24 24" fill="none"
-							xmlns="http://www.w3.org/2000/svg">
-							<path
-								d="M15.535 3.515L7.04999 12L15.535 20.485L16.95 19.071L9.87799 12L16.95 4.929L15.535 3.515Z"
-								fill="#2E3A59"></path>
-						</svg></div>
-					<div class="arrowBlock arrowRight "><svg width="34" height="34" viewBox="0 0 24 24" fill="none"
-							xmlns="http://www.w3.org/2000/svg">
-							<path
-								d="M8.46501 20.485L16.95 12L8.46501 3.515L7.05001 4.929L14.122 12L7.05001 19.071L8.46501 20.485Z"
-								fill="#2E3A59"></path>
-						</svg></div>
-					<div class="scrollContainer" style="transform: translateX(0px);">
+			
+						<div class="swiper-container specialtySwiper">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="specialtyItem" data-specialty style="opacity: 1;">
+										Акушерство и гинекология
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="specialtyItem" data-specialty style="opacity: 1;">
+										Акушерство и гинекология
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="specialtyItem" data-specialty style="opacity: 1;">
+										Акушерство и гинекология
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="specialtyItem" data-specialty style="opacity: 1;">
+										Акушерство и гинекология
+									</div>
+								</div>
+							</div>
+							<div class="swiper-button-next rightArrowSpecialty "></div>
+							<div class="swiper-button-prev leftArrowSpecialty"></div>
+						
+
+						</div>
 
 
 
-						<div class="specialtyItem" data-specialty style="opacity: 1;">
-							Акушерство и гинекология
-						</div>
-						<div class="specialtyItem" data-specialty style="opacity: 1;">
-							Акушерство и гинекология
-						</div>
-						<div class="specialtyItem" data-specialty style="opacity: 1;">
-							Акушерство и гинекология
-						</div>
-						<div class="specialtyItem" data-specialty style="opacity: 1;">
-							Акушерство и гинекология
-						</div>
-						<div class="specialtyItem" data-specialty style="opacity: 1;">
-							Акушерство и гинекология
-						</div>
-						<div class="specialtyItem" data-specialty style="opacity: 1;">
-							Акушерство и гинекология
-						</div>
 
-						<span style="width: 50px;"></span>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -797,7 +791,7 @@
 				</div>
 			</div>
 
-			<h3 class="h3">Похожие мероприятия</h3>
+			<h3 class="h3 common-events">Похожие мероприятия</h3>
 		</div>
 	</div>
 
