--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 				<div class="hr hrHeader"></div>
 				<p class="eventDate">Дата проведения мероприятия</p>
 				<div class="dates more450">5 апреля 2021 г. - 7 апреля 2021 г. </div>
-				<div class="dates less450">5 апреля 2021 г. - <br> 7 апреля 2021 г. </div>
+				<div class="dates less450">5 апреля 2021 г. </div>
 				<button class="sponsorsButton">Спонсоры мероприятия</button>
 			</div>
 			<div class="count">
